--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,9 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
     "strict": true,
     "allowJs": true,
     "noImplicitAny": true,
